--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,21 @@
 {
     "functions": {
-      "api/server.js": {
-        "memory": 1024,
-        "includeFiles": "db.json"
-      }
+        "api/server.js": {
+            "memory": 1024,
+            "includeFiles": "db.json"
+        }
     },
     "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "api/server.js"
-      }
+        {
+            "source": "/(.*)",
+            "destination": "api/server.js"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/",
+            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+        }
     ]
-  }
+}
